tests/snapshots/serde__de_undefined.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nundefined"
---
=== VALUE ===
Undefined

=== HEAP ===
Heap {}

