tests/snapshots/serde__display_array_buffer_data.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nconst a = new Float64Array([1, 2, 3]); a.buffer"
---
new Uint8Array([
  0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xf0, 0x3f,
  0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x40,
  0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x08, 0x40,
]).buffer
