tests/snapshots/serde__display_array_buffer_zeroed.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew ArrayBuffer(5)"
---
new ArrayBuffer(5)
