tests/snapshots/serde__display_arraybuffer_one_byte.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew ArrayBuffer(1)"
---
new ArrayBuffer(1)
