tests/snapshots/serde__display_arraybuffer_with_data.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Uint8Array([1,2]).buffer"
---
new Uint8Array([
  0x01, 0x02,
]).buffer
