tests/snapshots/serde__display_bigint64array_empty.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew BigInt64Array()"
---
new BigInt64Array()
