tests/snapshots/serde__display_bigint64array_one_byte.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew BigInt64Array([-1n])"
---
new BigInt64Array([
  -0x01n,
])
