tests/snapshots/serde__display_bigint64array_resizable.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew BigInt64Array(new ArrayBuffer(8, { maxByteLength: 16 }))"
---
const v0 = new ArrayBuffer(8, { maxByteLength: 16 });
new BigInt64Array(v0)
